--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,34 +1,18 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Deploy to GitHub Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
+    branches:
+      - main
 
 jobs:
-  # Single deploy job since we're just deploying
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build:
     runs-on: ubuntu-latest
+
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
@@ -40,19 +24,33 @@ jobs:
       - name: Convert Markdown to HTML
         run: |
           mkdir -p dist/blog-posts
-          cp blog-posts/*.md dist/blog-posts/
+          
+          # Check if blog-posts directory exists
+          if [ -d "blog-posts" ]; then
+            echo "Directory blog-posts exists."
+          else
+            echo "Directory blog-posts does not exist. Exiting."
+            exit 1
+          fi
+
+          # Convert Markdown files to HTML
           for file in blog-posts/*.md; do
-            marked "$file" > "dist/${file%.md}.html"
+            if [ -e "$file" ]; then
+              echo "Converting $file"
+              marked "$file" > "dist/blog-posts/$(basename "${file%.md}.html")"
+            else
+              echo "No Markdown files found in blog-posts directory."
+              exit 1
+            fi
           done
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          # Upload entire repository
-          path: '.'
+
+          # Copy static files
+          cp index.html dist/
+          cp styles.css dist/
+          cp script.js dist/
+
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
